# news-summarizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/news_summarizer/: cli.py  cluster.py  embed.py  entities.py  ingest.py  query.py  server_http.py  server_mcp.py  storage.py  summarize.py
tests/: test_cli.py  test_cluster.py  test_embed.py  test_entities.py  test_http.py  test_mcp.py  test_query.py  test_storage.py  test_summarize.py
