[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-summarizer"
version = "0.3.0"
description = "Silver layer over news-aggregator: cluster, summarize, understand, update."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "sqlite-vec>=0.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]
llm = [
    # Local embedding model (downloaded on first use)
]
embed = [
    "sentence-transformers>=2.7.0",
    "torch>=2.0.0",
]

[project.scripts]
news-summarizer = "news_summarizer.cli:main"
news-summarizer-http = "news_summarizer.server_http:main"
news-summarizer-mcp = "news_summarizer.server_mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"
